src/test/ui/huge-enum.stderr
error: the type `Option<TYPE>` is too big for the current architecture
  --> $DIR/huge-enum.rs:16:9
   |
LL |     let big: BIG = None;
   |         ^^^

error: aborting due to previous error

